# AniLoS

./: README.md  pyproject.toml  setup.py
examples/: Example.ipynb  Example_aniclass.ipynb
examples/.ipynb_checkpoints/: Example_aniclass-checkpoint.ipynb
src/anilos/: __init__.py  anilos.py  hierarchy.py
src/anilos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/anilos/hybess_src/: hybess.c  hybess.pyx
